name:                lambda-exchange
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lambda-exchange#readme
license:             BSD3
author:              Michael Burge
maintainer:          michaelburge@pobox.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable le
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , lambda-exchange
  default-language:    Haskell2010
                     
library
  hs-source-dirs:      src
  exposed-modules:     LE.Types
                       LE.Trading
                       LE.Networking
                       LE.Map
                       LE.Checks
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , containers
                     , stm
                     , monad-loops
                     , tagged
                     , warp
                     , wai
                     , http-types
                     , aeson
                     , bytestring
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor
                     , DeriveTraversable
                     , DeriveFoldable
                     , DeriveGeneric
                     , OverloadedStrings
                     , RecordWildCards
                     , NoImplicitPrelude
                     , ImplicitParams
                     , RankNTypes
                     , LambdaCase
                     , TypeSynonymInstances
                     , FlexibleInstances
source-repository head
  type:     git
  location: https://github.com/MichaelBurge/lambda-exchange
